fixed help background z-index by adding position

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ img{border:none;}
 	#intro-container img#loading {margin-left:155px;}
 
 
-#help {width:100%; height:100%; background:#000; opacity:0.7; z-index:3140000; display:none;}
+#help {width:100%; height:100%; background:#000; opacity:0.8; z-index:3200000; display:none; position:relative;}
 #help1 {position:absolute; bottom:75px; left:175px;  width:404px; height:53px; z-index:3200000; background:url('images/help-1.png') no-repeat bottom left; display:none;}
 #help2 {position:absolute; bottom:75px; right:450px; width:272px; height:60px; z-index:3200000; background:url('images/help-2.png') no-repeat bottom right; display:none;}
 #help3 {position:absolute; bottom:70px; right:4px; width:552px; height:103px; z-index:3200000; background:url('images/help-3.png') no-repeat bottom right; display:none;}
